Images added and style updated

--- a/index.html
+++ b/index.html
@@ -5,11 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" />
     <link rel="stylesheet" href="/public/style.css">
-    <title></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <title>GB | AdminDashboard</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="header">header</div>
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <img src="/src/img/view-dashboard.png" class="icon-header" alt="">Dashboard
+            </div>
+            <div style="background-color:red">
+                <ul>
+                    <li><img src="/src/img/home.png" class="icon" alt="">
+                        Home
+                    </li>
+                    <li><img src="/src/img/card-account-details.png" class="icon" alt="">
+                        Profile
+                    </li>
+                    <li><img src="/src/img/message-check.png" class="icon" alt="">
+                        Messages
+                    </li>
+                    <li><img src="/src/img/clipboard-text-clock-outline.png" class="icon" alt="">
+                        History
+                    </li>
+                    <li><img src="/src/img/calendar-check-outline.png" class="icon" alt="">
+                        Tasks
+                    </li>
+                    <li><img src="/src/img/account-group.png" class="icon" alt="">
+                        Communities
+                    </li>
+                </ul>
+            </div>
+
+            <div style="background-color:aqua">
+                <ul>
+                    <li><img src="/src/img/cog-refresh-outline.png" class="icon" alt="">Settings</li>
+                    <li><img src="/src/img/help-rhombus-outline.png" class="icon" alt="">Support</li>
+                    <li><img src="/src/img/shield-lock-outline.png" class="icon" alt="">Privacy</li>
+                </ul>
+            </div>
+        </div>
+        <div class="projects">
+            <div class="content-project1">
+                <div>
+                    <h1>Your Projects</h1>
+                </div>
+                <div class="content-card"></div>
+                <div class="content-card"></div>
+                <div class="content-card"></div>
+                <div></div>
+            </div>
+            <div style="background-color:blue"></div>
+            <div style="background-color:yellow"></div>
+        </div>
+    </div>
 </body>
 
 </html>
