--- a/index.html
+++ b/index.html
@@ -53,17 +53,21 @@
             </div>
         </div>
         <div class="projects">
+            <div style="background-color:red"></div>
             <div class="content-project1">
-                <div>
-                    <h1>Your Projects</h1>
+                <div class="content">
+                    <div class="content-card"></div>
+                    <div class="content-card"></div>
+                    <div class="content-card"></div>
                 </div>
-                <div class="content-card"></div>
-                <div class="content-card"></div>
-                <div class="content-card"></div>
-                <div></div>
+                <div class="content">
+                    <div class="content-card"></div>
+                    <div class="content-card"></div>
+                    <div class="content-card"></div>
+                </div>
+                <div style="background-color:red"></div>
             </div>
-            <div style="background-color:blue"></div>
-            <div style="background-color:yellow"></div>
+            <div style="background-color:red"></div>
         </div>
     </div>
 </body>
