Dashboard style updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="sidebar-header">
                 <img src="/src/img/view-dashboard.png" class="icon-header" alt="">Dashboard
             </div>
-            <div style="background-color:red">
+            <div>
                 <ul>
                     <li><img src="/src/img/home.png" class="icon" alt="">
                         Home
@@ -44,7 +44,7 @@
                 </ul>
             </div>
 
-            <div style="background-color:aqua">
+            <div>
                 <ul>
                     <li><img src="/src/img/cog-refresh-outline.png" class="icon" alt="">Settings</li>
                     <li><img src="/src/img/help-rhombus-outline.png" class="icon" alt="">Support</li>
@@ -53,10 +53,18 @@
             </div>
         </div>
         <div class="projects">
-            <div style="background-color:red"></div>
+            <div class="header-project">
+                <div>
+                    <h1 class="header-pd">Your Projects</h1>
+                </div>
+                <div>
+                    <h1 class="header-pd">Announcements</h1>
+                </div>
+            </div>
             <div class="content-project1">
                 <div class="content">
-                    <div class="content-card"></div>
+                    <div class="content-card">
+                    </div>
                     <div class="content-card"></div>
                     <div class="content-card"></div>
                 </div>
@@ -65,9 +73,12 @@
                     <div class="content-card"></div>
                     <div class="content-card"></div>
                 </div>
-                <div style="background-color:red"></div>
+                <div class="content-project2">
+                    <div class="content-card"></div>
+                    <h1 class="header-align">Trending</h1>
+                    <div class="content-card"></div>
+                </div>
             </div>
-            <div style="background-color:red"></div>
         </div>
     </div>
 </body>
