Added icons to project cards

--- a/index.html
+++ b/index.html
@@ -64,19 +64,78 @@
             <div class="content-project1">
                 <div class="content">
                     <div class="content-card">
+                        <h2>Super Cool Project</h2>
+                        <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis
+                            accumsan nec.</p>
+                        <div class="link-icon">
+                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                        </div>
                     </div>
-                    <div class="content-card"></div>
-                    <div class="content-card"></div>
+                    <div class="content-card">
+                        <h2>Less Cool Project</h2>
+                        <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt,
+                            consectetur sapein et, facilisis dolor.
+                            Duis sem purus, dignissim ut sapien in, varius pellentesque lacus
+                        </p>
+                        <div class="link-icon">
+                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="content-card">
+                        <h2>Impossible App</h2>
+                        <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
+                        </p>
+                        <div class="link-icon">
+                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="content">
-                    <div class="content-card"></div>
-                    <div class="content-card"></div>
-                    <div class="content-card"></div>
+                    <div class="content-card">
+                        <h2>Easy Peasy App</h2>
+                        <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam.
+                            Curabitur dignissim nisi in tortor
+                            commodo, ac bibendum magna tincidunt.
+                        </p>
+                        <div class="link-icon">
+                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="content-card">
+                        <h2>Ad Blocker</h2>
+                        <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae mesus vel, pharetra hendrerit felis.
+                            Aliquam sed malesuada eros.</p>
+                        <div class="link-icon">
+                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="content-card">
+                        <h2>Money Maker</h2>
+                        <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque
+                            tortor purus sit amet ex. Pellentesque
+                            mollis nec sem vel aliquam.
+                        </p>
+                        <div class="link-icon">
+                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="content-project2">
-                    <div class="content-card"></div>
+                    <div class="announcements"></div>
                     <h1 class="header-align">Trending</h1>
-                    <div class="content-card"></div>
+                    <div class="trending"></div>
                 </div>
             </div>
         </div>
