--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <body>
     <div class="container">
-        <div class="header">header</div>
+        <div class="header">
+            <p>Hi there,</p>
+            <p>John Wick</p>
+        </div>
         <div class="sidebar">
             <div class="sidebar-header">
                 <img src="/src/img/view-dashboard.png" class="icon-header" alt="">Dashboard
