New icons added

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
 <body>
     <div class="container">
         <div class="header">
-            <p>Hi there,</p>
-            <p>John Wick</p>
+            <div class="header-top">
+                <img src="/src/img/magnify.png" class="search-icon" alt="">
+                <div class="search-bar">
+                    Search here
+                </div>
+                <img src="/src/img/bell-ring.png" class="bell-icon" alt="">
+                <img src="/src/img/home.png" class="profile-icon" alt="">
+                <p class="profile-name">Morgan Oakley</p>
+            </div>
+            <div class="header-bottom"></div>
         </div>
         <div class="sidebar">
             <div class="sidebar-header">
