Added selection features to navigation bar

--- a/index.html
+++ b/index.html
@@ -20,13 +20,22 @@
             <div class="header-top">
                 <img src="/src/img/magnify.png" class="search-icon" alt="">
                 <div class="search-bar">
-                    Search here
+                    <p>Search here</p>
                 </div>
                 <img src="/src/img/bell-ring.png" class="bell-icon" alt="">
-                <img src="/src/img/home.png" class="profile-icon" alt="">
-                <p class="profile-name">Morgan Oakley</p>
+                <img src="/src/img/profile.jpg" class="profile-icon" alt="">
+                <p class="profile-name">John Wick</p>
             </div>
-            <div class="header-bottom"></div>
+            <div class="header-bottom">
+                <img src="/src/img/profile.jpg" class="profile-icon-left" alt="">
+                <p class="hello">Hi there,</p>
+                <p class="profile-name-left">John Wick (@jwick)</p>
+                <div class="button">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
         <div class="sidebar">
             <div class="sidebar-header">
@@ -144,7 +153,11 @@
                     </div>
                 </div>
                 <div class="content-project2">
-                    <div class="announcements"></div>
+                    <div class="announcements">
+                        <h3>Site Maintenance</h3>
+                        <h3>Community Share Day</h3>
+                        <h3>Updated Privacy Policy</h3>
+                    </div>
                     <h1 class="header-align">Trending</h1>
                     <div class="trending"></div>
                 </div>
