--- a/index.html
+++ b/index.html
@@ -154,12 +154,45 @@
                 </div>
                 <div class="content-project2">
                     <div class="announcements">
-                        <h3>Site Maintenance</h3>
-                        <h3>Community Share Day</h3>
-                        <h3>Updated Privacy Policy</h3>
+                        <div>
+                            <h3>Site Maintenance</h3>
+                            <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales
+                                congue...</p>
+                            <div class="border-line"></div>
+                        </div>
+                        <div>
+                            <h3>Community Share Day</h3>
+                            <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan
+                                porttitor...</p>
+                            <div class="border-line"></div>
+                        </div>
+                        <div>
+                            <h3>Updated Privacy Policy</h3>
+                            <p>Phasellus efficitur nis eget elit consectetur, eget condimentum ante auctor. Cras
+                                fringilla
+                                sagittis sem in mattis...
+                            </p>
+                        </div>
                     </div>
                     <h1 class="header-align">Trending</h1>
-                    <div class="trending"></div>
+                    <div class="trending">
+                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>Hi there,</p>
+                            <p>John Wick</p>
+                        </div>
+                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>Hi there,</p>
+                            <p>John Wick</p>
+                        </div>
+                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>Hi there,</p>
+                            <p>John Wick</p>
+                        </div>
+                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>Hi there,</p>
+                            <p>John Wick</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
