Style updated to include icon positioning

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <p class="hello">Hi there,</p>
                 <p class="profile-name-left">John Wick (@jwick)</p>
                 <div class="button">
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
+                    <button type="button">New</button>
+                    <button type="button">Upload</button>
+                    <button type="button">Share</button>
                 </div>
             </div>
         </div>
@@ -176,21 +176,21 @@
                     </div>
                     <h1 class="header-align">Trending</h1>
                     <div class="trending">
-                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
-                            <p>Hi there,</p>
-                            <p>John Wick</p>
+                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>@tegan</p>
+                            <p class="trending-project">World Peace Builder</p>
                         </div>
-                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
-                            <p>Hi there,</p>
-                            <p>John Wick</p>
+                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>@morgan</p>
+                            <p class="trending-project">Super Cool Project</p>
                         </div>
-                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
-                            <p>Hi there,</p>
-                            <p>John Wick</p>
+                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>@kendall</p>
+                            <p class="trending-project">Life Changing App</p>
                         </div>
-                        <div><img src="/src/img/profile.jpg" class="trending-icon" alt="">
-                            <p>Hi there,</p>
-                            <p>John Wick</p>
+                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                            <p>@alex</p>
+                            <p class="trending-project">No Traffic Maker</p>
                         </div>
                     </div>
                 </div>
