Final Submission - Without responsiveness

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     </div>
                     <h1 class="header-align">Trending</h1>
                     <div class="trending">
-                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                        <div class="trending-profile"><img src="/src/img/profile-2.jpg" class="trending-icon" alt="">
                             <p>@tegan</p>
                             <p class="trending-project">World Peace Builder</p>
                         </div>
@@ -184,11 +184,11 @@
                             <p>@morgan</p>
                             <p class="trending-project">Super Cool Project</p>
                         </div>
-                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                        <div class="trending-profile"><img src="/src/img/profile-3.jpg" class="trending-icon" alt="">
                             <p>@kendall</p>
                             <p class="trending-project">Life Changing App</p>
                         </div>
-                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                        <div class="trending-profile"><img src="/src/img/profile-4.jpg" class="trending-icon" alt="">
                             <p>@alex</p>
                             <p class="trending-project">No Traffic Maker</p>
                         </div>
