Image files moved

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <div class="container">
         <div class="header">
             <div class="header-top">
-                <img src="/src/img/magnify.png" class="search-icon" alt="">
+                <img src="/img/magnify.png" class="search-icon" alt="">
                 <div class="search-bar">
                     <p>Search here</p>
                 </div>
-                <img src="/src/img/bell-ring.png" class="bell-icon" alt="">
-                <img src="/src/img/profile.jpg" class="profile-icon" alt="">
+                <img src="/img/bell-ring.png" class="bell-icon" alt="">
+                <img src="/img/profile.jpg" class="profile-icon" alt="">
                 <p class="profile-name">John Wick</p>
             </div>
             <div class="header-bottom">
-                <img src="/src/img/profile.jpg" class="profile-icon-left" alt="">
+                <img src="/img/profile.jpg" class="profile-icon-left" alt="">
                 <p class="hello">Hi there,</p>
                 <p class="profile-name-left">John Wick (@jwick)</p>
                 <div class="button">
@@ -39,26 +39,26 @@
         </div>
         <div class="sidebar">
             <div class="sidebar-header">
-                <img src="/src/img/view-dashboard.png" class="icon-header" alt="">Dashboard
+                <img src="/img/view-dashboard.png" class="icon-header" alt="">Dashboard
             </div>
             <div>
                 <ul>
-                    <li><img src="/src/img/home.png" class="icon" alt="">
+                    <li><img src="/img/home.png" class="icon" alt="">
                         Home
                     </li>
-                    <li><img src="/src/img/card-account-details.png" class="icon" alt="">
+                    <li><img src="/img/card-account-details.png" class="icon" alt="">
                         Profile
                     </li>
-                    <li><img src="/src/img/message-check.png" class="icon" alt="">
+                    <li><img src="/img/message-check.png" class="icon" alt="">
                         Messages
                     </li>
-                    <li><img src="/src/img/clipboard-text-clock-outline.png" class="icon" alt="">
+                    <li><img src="/img/clipboard-text-clock-outline.png" class="icon" alt="">
                         History
                     </li>
-                    <li><img src="/src/img/calendar-check-outline.png" class="icon" alt="">
+                    <li><img src="/img/calendar-check-outline.png" class="icon" alt="">
                         Tasks
                     </li>
-                    <li><img src="/src/img/account-group.png" class="icon" alt="">
+                    <li><img src="/img/account-group.png" class="icon" alt="">
                         Communities
                     </li>
                 </ul>
@@ -66,9 +66,9 @@
 
             <div>
                 <ul>
-                    <li><img src="/src/img/cog-refresh-outline.png" class="icon" alt="">Settings</li>
-                    <li><img src="/src/img/help-rhombus-outline.png" class="icon" alt="">Support</li>
-                    <li><img src="/src/img/shield-lock-outline.png" class="icon" alt="">Privacy</li>
+                    <li><img src="/img/cog-refresh-outline.png" class="icon" alt="">Settings</li>
+                    <li><img src="/img/help-rhombus-outline.png" class="icon" alt="">Support</li>
+                    <li><img src="/img/shield-lock-outline.png" class="icon" alt="">Privacy</li>
                 </ul>
             </div>
         </div>
@@ -88,9 +88,9 @@
                         <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis
                             accumsan nec.</p>
                         <div class="link-icon">
-                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
                         </div>
                     </div>
                     <div class="content-card">
@@ -100,9 +100,9 @@
                             Duis sem purus, dignissim ut sapien in, varius pellentesque lacus
                         </p>
                         <div class="link-icon">
-                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
                         </div>
                     </div>
                     <div class="content-card">
@@ -110,9 +110,9 @@
                         <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.
                         </p>
                         <div class="link-icon">
-                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -124,9 +124,9 @@
                             commodo, ac bibendum magna tincidunt.
                         </p>
                         <div class="link-icon">
-                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
                         </div>
                     </div>
                     <div class="content-card">
@@ -134,9 +134,9 @@
                         <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae mesus vel, pharetra hendrerit felis.
                             Aliquam sed malesuada eros.</p>
                         <div class="link-icon">
-                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
                         </div>
                     </div>
                     <div class="content-card">
@@ -146,9 +146,9 @@
                             mollis nec sem vel aliquam.
                         </p>
                         <div class="link-icon">
-                            <a href=""><img src="/src/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
-                            <a href=""><img src="/src/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/star-plus-outline.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/eye-check.png" class="icon link-icon-pd" alt=""></a>
+                            <a href=""><img src="/img/source-fork.png" class="icon link-icon-pd" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -176,19 +176,19 @@
                     </div>
                     <h1 class="header-align">Trending</h1>
                     <div class="trending">
-                        <div class="trending-profile"><img src="/src/img/profile-2.jpg" class="trending-icon" alt="">
+                        <div class="trending-profile"><img src="/img/profile-2.jpg" class="trending-icon" alt="">
                             <p>@tegan</p>
                             <p class="trending-project">World Peace Builder</p>
                         </div>
-                        <div class="trending-profile"><img src="/src/img/profile.jpg" class="trending-icon" alt="">
+                        <div class="trending-profile"><img src="/img/profile.jpg" class="trending-icon" alt="">
                             <p>@morgan</p>
                             <p class="trending-project">Super Cool Project</p>
                         </div>
-                        <div class="trending-profile"><img src="/src/img/profile-3.jpg" class="trending-icon" alt="">
+                        <div class="trending-profile"><img src="/img/profile-3.jpg" class="trending-icon" alt="">
                             <p>@kendall</p>
                             <p class="trending-project">Life Changing App</p>
                         </div>
-                        <div class="trending-profile"><img src="/src/img/profile-4.jpg" class="trending-icon" alt="">
+                        <div class="trending-profile"><img src="/img/profile-4.jpg" class="trending-icon" alt="">
                             <p>@alex</p>
                             <p class="trending-project">No Traffic Maker</p>
                         </div>
